// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sendConfirmation reducer address NEW_SPEND_INFO 1`] = `
{
  "address": "123123123",
  "authRequired": "none",
  "error": null,
  "forceUpdateGuiCounter": 0,
  "guiMakeSpendInfo": {
    "customNetworkFee": {},
    "metadata": {
      "amountFiat": 0,
      "bizId": 0,
      "category": "",
      "name": "",
      "notes": "",
    },
    "nativeAmount": "0",
    "networkFeeOption": "standard",
    "publicAddress": "123123123",
    "spendTargets": [
      {
        "nativeAmount": "0",
        "publicAddress": "123123123",
      },
    ],
    "uniqueIdentifier": undefined,
  },
  "isSendUsingFioAddress": false,
  "maxSpendSet": false,
  "nativeAmount": "0",
  "pin": "",
  "spendInfo": {
    "metadata": {},
    "spendTargets": [
      {
        "nativeAmount": "0",
        "publicAddress": "123123123",
      },
    ],
  },
  "toggleCryptoOnTop": 0,
  "transaction": null,
  "transactionMetadata": {},
}
`;

exports[`sendConfirmation reducer destination newSpendInfo with name 1`] = `
{
  "address": "123123123",
  "authRequired": "none",
  "error": null,
  "forceUpdateGuiCounter": 0,
  "guiMakeSpendInfo": {
    "customNetworkFee": {},
    "metadata": {
      "amountFiat": 0,
      "bizId": 0,
      "category": "",
      "name": "airbitz",
      "notes": "",
    },
    "nativeAmount": "1000",
    "networkFeeOption": "standard",
    "publicAddress": "123123123",
    "spendTargets": [
      {
        "currencyCode": "BTC",
        "nativeAmount": "1000",
        "publicAddress": "123123123",
      },
    ],
    "uniqueIdentifier": undefined,
  },
  "isSendUsingFioAddress": false,
  "maxSpendSet": false,
  "nativeAmount": "1000",
  "pin": "",
  "spendInfo": {
    "currencyCode": "BTC",
    "metadata": {
      "name": "airbitz",
    },
    "nativeAmount": "1000",
    "spendTargets": [
      {
        "currencyCode": "BTC",
        "nativeAmount": "1000",
        "publicAddress": "123123123",
      },
    ],
  },
  "toggleCryptoOnTop": 0,
  "transaction": null,
  "transactionMetadata": {
    "name": "airbitz",
  },
}
`;

exports[`sendConfirmation reducer destination newSpendInfo without name 1`] = `
{
  "address": "123123123",
  "authRequired": "none",
  "error": null,
  "forceUpdateGuiCounter": 0,
  "guiMakeSpendInfo": {
    "customNetworkFee": {},
    "metadata": {
      "amountFiat": 0,
      "bizId": 0,
      "category": "",
      "name": "",
      "notes": "",
    },
    "nativeAmount": "1000",
    "networkFeeOption": "standard",
    "publicAddress": "123123123",
    "spendTargets": [
      {
        "currencyCode": "BTC",
        "nativeAmount": "1000",
        "publicAddress": "123123123",
      },
    ],
    "uniqueIdentifier": undefined,
  },
  "isSendUsingFioAddress": false,
  "maxSpendSet": false,
  "nativeAmount": "1000",
  "pin": "",
  "spendInfo": {
    "currencyCode": "BTC",
    "metadata": {},
    "nativeAmount": "1000",
    "spendTargets": [
      {
        "currencyCode": "BTC",
        "nativeAmount": "1000",
        "publicAddress": "123123123",
      },
    ],
  },
  "toggleCryptoOnTop": 0,
  "transaction": null,
  "transactionMetadata": {},
}
`;

exports[`sendConfirmation reducer destination updateTransaction with error 1`] = `
{
  "address": "",
  "authRequired": "none",
  "error": [Error],
  "forceUpdateGuiCounter": 1,
  "guiMakeSpendInfo": {
    "customNetworkFee": {},
    "metadata": {
      "amountFiat": 0,
      "bizId": 0,
      "category": "",
      "name": "",
      "notes": "",
    },
    "nativeAmount": "100000",
    "networkFeeOption": "standard",
    "publicAddress": "",
  },
  "isSendUsingFioAddress": false,
  "maxSpendSet": false,
  "nativeAmount": "100000",
  "pin": "",
  "spendInfo": null,
  "toggleCryptoOnTop": 0,
  "transaction": null,
  "transactionMetadata": null,
}
`;

exports[`sendConfirmation reducer destination updateTransaction with pin error 1`] = `
{
  "address": "",
  "authRequired": "none",
  "error": [Error: Incorrect PIN],
  "forceUpdateGuiCounter": 1,
  "guiMakeSpendInfo": {
    "customNetworkFee": {},
    "metadata": {
      "amountFiat": 0,
      "bizId": 0,
      "category": "",
      "name": "",
      "notes": "",
    },
    "nativeAmount": "0",
    "networkFeeOption": "standard",
    "publicAddress": "",
  },
  "isSendUsingFioAddress": false,
  "maxSpendSet": false,
  "nativeAmount": "0",
  "pin": "",
  "spendInfo": null,
  "toggleCryptoOnTop": 0,
  "transaction": {
    "blockHeight": 0,
    "currencyCode": "BCH",
    "date": 0,
    "isSend": true,
    "memos": [],
    "nativeAmount": "-681",
    "networkFee": "681",
    "otherParams": {},
    "ourReceiveAddresses": [
      "123123123",
    ],
    "signedTx": "",
    "txid": "",
    "walletId": "",
  },
  "transactionMetadata": null,
}
`;

exports[`sendConfirmation reducer destination updateTransaction with transaction and legacyAddress 1`] = `
{
  "address": "",
  "authRequired": "none",
  "error": null,
  "forceUpdateGuiCounter": 1,
  "guiMakeSpendInfo": {
    "currencyCode": "BCH",
    "customNetworkFee": {},
    "legacyAddress": "123412341234",
    "metadata": {
      "amountFiat": 0,
      "bizId": 0,
      "category": "",
      "name": "",
      "notes": "",
    },
    "nativeAmount": "100000",
    "networkFeeOption": "standard",
    "publicAddress": "bitcoincash:qpltjkre069mp80ylcj87832ju3zt2gr6gercn9j2z",
  },
  "isSendUsingFioAddress": false,
  "maxSpendSet": false,
  "nativeAmount": "100000",
  "pin": "",
  "spendInfo": null,
  "toggleCryptoOnTop": 0,
  "transaction": {
    "blockHeight": 0,
    "currencyCode": "BCH",
    "date": 0,
    "isSend": true,
    "memos": [],
    "nativeAmount": "-681",
    "networkFee": "681",
    "otherParams": {},
    "ourReceiveAddresses": [
      "123123123",
    ],
    "signedTx": "",
    "txid": "",
    "walletId": "",
  },
  "transactionMetadata": {},
}
`;

exports[`sendConfirmation reducer destination updateTransaction with transaction and name 1`] = `
{
  "address": "",
  "authRequired": "none",
  "error": null,
  "forceUpdateGuiCounter": 1,
  "guiMakeSpendInfo": {
    "currencyCode": "BCH",
    "customNetworkFee": {},
    "metadata": {
      "amountFiat": 0,
      "bizId": 0,
      "category": "",
      "name": "airbitz",
      "notes": "",
    },
    "nativeAmount": "100000",
    "networkFeeOption": "standard",
    "publicAddress": "bitcoincash:qpltjkre069mp80ylcj87832ju3zt2gr6gercn9j2z",
  },
  "isSendUsingFioAddress": false,
  "maxSpendSet": false,
  "nativeAmount": "100000",
  "pin": "",
  "spendInfo": null,
  "toggleCryptoOnTop": 0,
  "transaction": {
    "blockHeight": 0,
    "currencyCode": "BCH",
    "date": 0,
    "isSend": true,
    "memos": [],
    "nativeAmount": "-681",
    "networkFee": "681",
    "otherParams": {},
    "ourReceiveAddresses": [
      "123123123",
    ],
    "signedTx": "",
    "txid": "",
    "walletId": "",
  },
  "transactionMetadata": {
    "name": "airbitz",
  },
}
`;

exports[`sendConfirmation reducer initialState 1`] = `
{
  "address": "",
  "authRequired": "none",
  "error": null,
  "forceUpdateGuiCounter": 0,
  "guiMakeSpendInfo": {
    "customNetworkFee": {},
    "metadata": {
      "amountFiat": 0,
      "bizId": 0,
      "category": "",
      "name": "",
      "notes": "",
    },
    "nativeAmount": "",
    "networkFeeOption": "standard",
    "publicAddress": "",
  },
  "isSendUsingFioAddress": false,
  "maxSpendSet": false,
  "nativeAmount": "",
  "pin": "",
  "spendInfo": null,
  "toggleCryptoOnTop": 0,
  "transaction": {
    "blockHeight": -1,
    "currencyCode": "",
    "date": 0,
    "isSend": true,
    "memos": [],
    "metadata": {},
    "nativeAmount": "",
    "networkFee": "",
    "otherParams": {},
    "ourReceiveAddresses": [],
    "parentNetworkFee": "",
    "signedTx": "",
    "txid": "",
    "walletId": "",
  },
  "transactionMetadata": null,
}
`;

exports[`sendConfirmation reducer pin 1`] = `
{
  "address": "",
  "authRequired": "none",
  "error": null,
  "forceUpdateGuiCounter": 0,
  "guiMakeSpendInfo": {
    "customNetworkFee": {},
    "metadata": {
      "amountFiat": 0,
      "bizId": 0,
      "category": "",
      "name": "",
      "notes": "",
    },
    "nativeAmount": "",
    "networkFeeOption": "standard",
    "publicAddress": "",
  },
  "isSendUsingFioAddress": false,
  "maxSpendSet": false,
  "nativeAmount": "",
  "pin": "1234",
  "spendInfo": null,
  "toggleCryptoOnTop": 0,
  "transaction": {
    "blockHeight": -1,
    "currencyCode": "",
    "date": 0,
    "isSend": true,
    "memos": [],
    "metadata": {},
    "nativeAmount": "",
    "networkFee": "",
    "otherParams": {},
    "ourReceiveAddresses": [],
    "parentNetworkFee": "",
    "signedTx": "",
    "txid": "",
    "walletId": "",
  },
  "transactionMetadata": null,
}
`;

exports[`sendConfirmation reducer reset 1`] = `
{
  "address": "",
  "authRequired": "none",
  "error": null,
  "forceUpdateGuiCounter": 0,
  "guiMakeSpendInfo": {
    "customNetworkFee": {},
    "metadata": {
      "amountFiat": 0,
      "bizId": 0,
      "category": "",
      "name": "",
      "notes": "",
    },
    "nativeAmount": "",
    "networkFeeOption": "standard",
    "publicAddress": "",
  },
  "isSendUsingFioAddress": false,
  "maxSpendSet": false,
  "nativeAmount": "",
  "pin": "",
  "spendInfo": null,
  "toggleCryptoOnTop": 0,
  "transaction": {
    "blockHeight": -1,
    "currencyCode": "",
    "date": 0,
    "isSend": true,
    "memos": [],
    "metadata": {},
    "nativeAmount": "",
    "networkFee": "",
    "otherParams": {},
    "ourReceiveAddresses": [],
    "parentNetworkFee": "",
    "signedTx": "",
    "txid": "",
    "walletId": "",
  },
  "transactionMetadata": null,
}
`;
